Added listview and place details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">travelup</string>
     <string name="fb_id">1603781213250102</string>
+    <string name="description">A great place to visit. Better to visit in January-March. The beaches are awesome. And so is the weather. Local cuisine isn\'t to be missed!</string>
 </resources>
